--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   package:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'ReleaseCandidate')
     name: Create package
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
 
@@ -75,15 +75,14 @@ jobs:
 
   github-release:
     name: Publish github release
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: [package, windows-package]
     env:
       GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install hub
-        run: brew install hub
+      - uses: geertvdc/setup-hub@master
 
       - uses: actions/download-artifact@v1
         with:
@@ -98,7 +97,7 @@ jobs:
       - name: update release note
         run: |
           cd deploy
-          version=$(ls gauge-*-darwin.x86.zip |  sed 's/gauge-//' | sed 's/-darwin.*//')
+          version=$(ls gauge-*-linux.x86.zip |  sed 's/gauge-//' | sed 's/-linux.*//')
           if [ -z "$version" ]; then
               echo "Gauge version is not set"
               exit 1
@@ -107,16 +106,19 @@ jobs:
           release_description=$(ruby -e "$(curl -sSfL https://github.com/getgauge/gauge/raw/master/build/create_release_text.rb)" gauge getgauge)
           echo "$release_description" >> desc.txt
           echo "Creating new draft for release v$version"
-          hub release create -F ./desc.txt "v$version"
 
+          hub release create -F ./desc.txt "v$version"
           echo "Start uploading artifacts"
           for artifact in `ls gauge-*`; do
               hub release edit -m "" -a $artifact v$version
           done
+
+          cat desc.txt
+
           rm -rf desc.txt
 
   pypi-release:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: [github-release]
     steps:
       - name: Switch to $GITHUB_REF
@@ -147,7 +149,7 @@ jobs:
 
   npm-release:
     needs: [github-release]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Switch to $GITHUB_REF
         uses: actions/checkout@v1
@@ -263,18 +265,15 @@ jobs:
 
   brew-release:
     needs: [github-release]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: Switch to $GITHUB_REF
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
+      - uses: geertvdc/setup-hub@master
 
       - name: Set gauge version
         run: |
           gauge_version=`git describe --abbrev=0 --tags | sed 's/[a-z\/]*//g'`
           echo "::set-env name=GAUGE_VERSION::$gauge_version"
-      - name: Install hub
-        run: |
-          brew install hub
 
       - name: Update brew formula
         env:
